Updated CMakeLists, integrated ctest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,39 @@ project(
     VERSION 0.1
 )
 
-set(CMAKE_CXX_STANDARD 20)
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+    set(CMAKE_CXX_STANDARD 20)
+    set(CMAKE_CXX_STANDARD_REQUIRED ON)
+    set(CMAKE_CXX_EXTENSIONS OFF)
 
+    set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
+    include(CTest)
+
+    enable_testing()
+endif()
+
+include(CheckCXXCompilerFlag)
+option(ENABLE_CUSTOM_COMPILER_FLAGS "Enables custom compiler flags" ON)
+if (ENABLE_CUSTOM_COMPILER_FLAGS)
+    list(APPEND custom_compiler_flags
+        -Wall
+        -Wextra
+        -Wpedantic
+        -Werror
+        -Wconversion
+    )
+endif()
+
+add_subdirectory(external)
 add_subdirectory(src)
-add_subdirectory(testbenches)
+
+option(ENABLE_TESTBENCHES "Enables testbenches" ON)
+if (ENABLE_TESTBENCHES)
+    add_subdirectory(testbenches)
+endif()
+
+option(ENABLE_TESTS "Enables tests" ON)
+if (ENABLE_TESTS)
+    add_subdirectory(tests)
+endif()
