--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,6 @@ if (NOT verilator_FOUND)
     message(FATAL_ERROR "Verilator not found")
 endif()
 
-add_executable(alu_test ALU_test.cpp)
-target_link_libraries(alu_test Doctest ALU)
-add_test(NAME alu_test COMMAND alu_test)
+add_executable(tristate_buffer_test tristate_buffer_test.cpp)
+target_link_libraries(tristate_buffer_test Doctest TRISTATE_BUFFER)
+add_test(NAME tristate_buffer_test COMMAND tristate_buffer_test)
