--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,11 @@ if (NOT verilator_FOUND)
     message(FATAL_ERROR "Verilator not found")
 endif()
 
-add_executable(tristate_buffer_test tristate_buffer_test.cpp)
-target_link_libraries(tristate_buffer_test Doctest TRISTATE_BUFFER)
-add_test(NAME tristate_buffer_test COMMAND tristate_buffer_test)
+function(add_verilator_test TEST_NAME LIBRARIES)
+    add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
+    target_link_libraries(${TEST_NAME} Doctest ${LIBRARIES})
+    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
+endfunction()
+
+add_verilator_test(tristate_buffer_test TRISTATE_BUFFER)
+add_verilator_test(register_test REGISTER)
