Added RAM (broken)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,3 +15,4 @@ add_module(REGISTER basics/register.v)
 add_module(CPU cpu/cpu.v)
 add_module(ALU cpu/alu.v)
 add_module(CONTROL_UNIT cpu/control_unit.v)
+add_module(RAM cpu/ram.v)
