--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,7 @@ endfunction()
 add_module(TRISTATE_BUFFER basics/tristate_buffer.v)
 add_module(COUNTER basics/counter.v)
 add_module(REGISTER basics/register.v)
-add_module(CPU cpu/cpu.v basics/counter.v basics/tristate_buffer.v basics/register.v)
+# add_module(CPU cpu/cpu.v basics/counter.v basics/tristate_buffer.v basics/register.v)
 add_module(ALU cpu/alu.v)
 add_module(CONTROL_UNIT cpu/control_unit.v)
 add_module(RAM cpu/ram.v)
