--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,3 +13,4 @@ add_verilator_test(tristate_buffer_test TRISTATE_BUFFER)
 add_verilator_test(register_test REGISTER)
 # add_verilator_test(ram_test RAM)
 add_verilator_test(alu_test ALU)
+add_verilator_test(counter_test COUNTER)
