--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,7 +49,7 @@ add_module(TRISTATE_BUFFER SOURCES basics/tristate_buffer.v)
 add_module(COUNTER SOURCES basics/counter.v)
 add_module(REGISTER SOURCES basics/register.v)
 # add_module(CPU cpu/cpu.v basics/counter.v basics/tristate_buffer.v basics/register.v cpu/alu.v)
-add_module(ALU SOURCES cpu/alu.v)
+add_module(ALU SOURCES cpu/alu.sv)
 add_module(CONTROL_UNIT SOURCES cpu/control_unit.v RESOURCE_DIRS roms -DROMS_PATH)
 add_module(RAM SOURCES adapters/ram_adapter.sv basics/ram.sv PREFIX Vram TOP_MODULE ram_adapter)
 add_module(MEM_UNIT SOURCES adapters/mem_unit_adapter.sv cpu/mem_unit.sv PREFIX Vmem_unit TOP_MODULE mem_unit_adapter)
