--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,3 +53,4 @@ add_module(ALU SOURCES cpu/alu.sv)
 add_module(CONTROL_UNIT SOURCES cpu/control_unit.v RESOURCE_DIRS roms -DROMS_PATH)
 add_module(RAM SOURCES adapters/ram_adapter.sv basics/ram.sv PREFIX Vram TOP_MODULE ram_adapter)
 add_module(MEM_UNIT SOURCES adapters/mem_unit_adapter.sv cpu/mem_unit.sv PREFIX Vmem_unit TOP_MODULE mem_unit_adapter)
+add_module(GPU SOURCES gpu/gpu.sv)
