--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,3 +16,4 @@ add_verilator_test(alu_test ALU)
 add_verilator_test(counter_test COUNTER)
 add_verilator_test(mem_unit_test MEM_UNIT)
 add_verilator_test(control_unit_test CONTROL_UNIT)
+add_verilator_test(tmp_test TMP)
