Added a shift register module

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,3 +17,4 @@ add_verilator_test(counter_test COUNTER)
 add_verilator_test(mem_unit_test MEM_UNIT)
 add_verilator_test(control_unit_test CONTROL_UNIT)
 add_verilator_test(tmp_test TMP)
+add_verilator_test(shift_reg_test SHIFT_REG)
