--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,10 +51,11 @@ endfunction()
 add_module(TRISTATE_BUFFER SOURCES basics/tristate_buffer.v)
 add_module(COUNTER SOURCES basics/counter.v)
 add_module(REGISTER SOURCES basics/register.v)
+add_module(SHIFT_REG SOURCES basics/shift_reg.sv)
 # add_module(CPU cpu/cpu.v basics/counter.v basics/tristate_buffer.v basics/register.v cpu/alu.v)
 add_module(ALU SOURCES cpu/alu.sv)
 add_module(CONTROL_UNIT SOURCES cpu/control_unit.v RESOURCE_DIRS roms -DROMS_PATH)
 add_module(RAM SOURCES adapters/ram_adapter.sv basics/ram.sv PREFIX Vram TOP_MODULE ram_adapter)
 add_module(MEM_UNIT SOURCES adapters/mem_unit_adapter.sv cpu/mem_unit.sv PREFIX Vmem_unit TOP_MODULE mem_unit_adapter)
-add_module(GPU SOURCES basics/counter.v gpu/gpu.sv RESOURCE_DIRS font -DFONT_PATH PREFIX Vgpu TOP_MODULE gpu)
+add_module(GPU SOURCES basics/shift_reg.sv gpu/gpu.sv RESOURCE_DIRS font -DFONT_PATH PREFIX Vgpu TOP_MODULE gpu)
 add_module(TMP SOURCES cpu/tmp.sv adapters/tmp_adapter.sv PREFIX Vtmp TOP_MODULE tmp_adapter)
