--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,9 +3,9 @@ if (NOT verilator_FOUND)
     message(FATAL_ERROR "Verilator not found")
 endif()
 
-function(add_verilator_test TEST_NAME LIBRARIES)
+function(add_verilator_test TEST_NAME)
     add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
-    target_link_libraries(${TEST_NAME} Doctest ${LIBRARIES})
+    target_link_libraries(${TEST_NAME} Doctest ${ARGN})
     add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
 endfunction()
 
@@ -18,3 +18,4 @@ add_verilator_test(mem_unit_test MEM_UNIT)
 add_verilator_test(control_unit_test CONTROL_UNIT)
 add_verilator_test(tmp_test TMP)
 add_verilator_test(shift_reg_test SHIFT_REG)
+add_verilator_test(cpu_test CPU MEM_UNIT)
