--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,7 +52,7 @@ add_module(TRISTATE_BUFFER SOURCES basics/tristate_buffer.v)
 add_module(COUNTER SOURCES basics/counter.v)
 add_module(REGISTER SOURCES basics/register.v)
 add_module(SHIFT_REG SOURCES basics/shift_reg.sv)
-# add_module(CPU cpu/cpu.v basics/counter.v basics/tristate_buffer.v basics/register.v cpu/alu.v)
+add_module(CPU SOURCES adapters/cpu_adapter.sv cpu/cpu.v basics/tristate_buffer.v basics/register.v cpu/alu.sv cpu/control_unit.v cpu/tmp.sv RESOURCE_DIRS roms -DROMS_PATH PREFIX Vcpu TOP_MODULE cpu_adapter)
 add_module(ALU SOURCES cpu/alu.sv)
 add_module(CONTROL_UNIT SOURCES cpu/control_unit.v RESOURCE_DIRS roms -DROMS_PATH)
 add_module(RAM SOURCES adapters/ram_adapter.sv basics/ram.sv PREFIX Vram TOP_MODULE ram_adapter)
