Added tests for modcounter

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,3 +19,4 @@ add_verilator_test(control_unit_test CONTROL_UNIT)
 add_verilator_test(tmp_test TMP)
 add_verilator_test(shift_reg_test SHIFT_REG)
 add_verilator_test(cpu_test CPU MEM_UNIT)
+add_verilator_test(modcounter_test MODCOUNTER_TEST_WRAPPER)
