--- a/simulator/CMakeLists.txt
+++ b/simulator/CMakeLists.txt
@@ -14,4 +14,4 @@ endif()
 
 target_compile_options(${EXEC_NAME} PRIVATE ${MAIN_FLAGS})
 
-target_link_libraries(${EXEC_NAME} GPU raylib Imgui)
+target_link_libraries(${EXEC_NAME} GPU raylib Imgui ImTerm)
