--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,43 +1,37 @@
 cmake_minimum_required(VERSION 3.10)
-
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
 project(VideoCard VERSION 0.1)
-
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
   set(CMAKE_CXX_STANDARD 20)
   set(CMAKE_CXX_STANDARD_REQUIRED ON)
   set(CMAKE_CXX_EXTENSIONS OFF)
-
   set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 endif()
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-  set(COMPILE_FLAGS -Wall -Wextra -Wpedantic -Wconversion)
-endif()
-
-if(MSVC)
-  add_compile_options(/W4)
-  add_compile_options(/permissive-)
+  add_compile_options(-Wall -Wextra -Wpedantic -Wconversion)
+elseif(MSVC)
+  add_compile_options(/W4 /permissive- /MP)
+  add_compile_options(/wd4100)
+  add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
 endif()
 
 option(ENABLE_SANITIZERS "Enable sanitizers." OFF)
-if(ENABLE_SANITIZER)
+if(ENABLE_SANITIZERS)
   message("- SANITIZERS ENABLED")
   if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
     set(SANITIZER_AVAILABLE_AND_SET
         TRUE
         CACHE BOOL "" FORCE)
     mark_as_advanced(SANITIZER_AVAILABLE_AND_SET)
-  endif()
-
-  if(NOT SANITIZER_AVAILABLE_AND_SET)
-    message(VERBOSE
-            "The option ENABLE_SANITIZER is set but sanitizers not found.")
-  else()
     set(SANITIZER_FLAGS -fsanitize=address,undefined -fno-omit-frame-pointer)
   endif()
+  if(NOT SANITIZER_AVAILABLE_AND_SET)
+    message(VERBOSE "The option ENABLE_SANITIZERS is set but sanitizers not found.")
+  endif()
 endif()
+
+file(TO_CMAKE_PATH "${CMAKE_SOURCE_DIR}/resources" RESOURCES_DIR)
 
 option(ENABLE_CLANG_TIDY "Enable clang-tidy" OFF)
 if(ENABLE_CLANG_TIDY)
@@ -69,18 +63,10 @@ if(ENABLE_CPPCHECK)
   endif()
 endif()
 
-set(RESOURCES_DIR "${CMAKE_SOURCE_DIR}/resources")
-
 add_subdirectory(external)
 add_subdirectory(MonitorTester_FPGA)
 add_subdirectory(src)
 add_subdirectory(simulator)
-
-
-# option(ENABLE_TESTBENCHES "Enables testbenches" ON)
-# if(ENABLE_TESTBENCHES)
-#   add_subdirectory(testbenches)
-# endif()
 
 option(ENABLE_TESTS "Enables tests" ON)
 if(ENABLE_TESTS)
@@ -88,8 +74,3 @@ if(ENABLE_TESTS)
   enable_testing()
   add_subdirectory(tests)
 endif()
-
-# option(ENABLE_EXAMPLES "Enables examples" ON)
-# if(ENABLE_EXAMPLES)
-#   add_subdirectory(examples)
-# endif()
