Reorganization continues... Merged this repository with KN-Breadboard-Computing/computer/verilog.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-project(VideoCard VERSION 0.1)
+project(8BitComputer VERSION 0.1)
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
   set(CMAKE_CXX_STANDARD 20)
   set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -66,6 +66,7 @@ endif()
 add_subdirectory(external)
 add_subdirectory(MonitorTester_FPGA)
 add_subdirectory(gpu)
+add_subdirectory(cpu)
 add_subdirectory(simulator)
 
 option(ENABLE_TESTS "Enables tests" ON)
