cmake: Change up compile flags once again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,11 @@ if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
   set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 endif()
 
-if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic -Wconversion)
-elseif(MSVC)
-  add_compile_options(/W4 /permissive- /MP)
-  add_compile_options(/wd4100)
-  add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
+if(MSVC)
+  set(SIMULATOR_COMPILE_OPTIONS /W4 /permissive- /MP /wd4100)
+  set(SIMULATOR_COMPILE_DEFINITIONS _CRT_SECURE_NO_WARNINGS)
+else()
+  set(SIMULATOR_COMPILE_OPTIONS -Wall -Wextra -Wpedantic -Wconversion)
 endif()
 
 option(ENABLE_SANITIZERS "Enable sanitizers." OFF)
