Simulator, External: Add the instruction level emulator

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,6 +1,8 @@
 # Include FetchContent and required dependencies
 include(FetchContent)
 
+add_subdirectory(emulator)
+
 # EXPECTED
 add_library (Expected INTERFACE)
 target_include_directories(Expected INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/expected)
