--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/imgui"]
 	path = external/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "external/emulator"]
+	path = external/emulator
+	url = https://github.com/KN-Breadboard-Computing/emulator
