--- a/simulator/CMakeLists.txt
+++ b/simulator/CMakeLists.txt
@@ -18,7 +18,7 @@ if(SANITIZER_AVAILABLE_AND_SET)
   target_link_libraries(${EXEC_NAME} ${SANITIZER_FLAGS})
 endif()
 
-target_link_libraries(${EXEC_NAME} GPU CPU MEM_UNIT PS2 MONITOR_TESTER raylib Imgui fmt Expected)
+target_link_libraries(${EXEC_NAME} GPU CPU MEM_UNIT PS2 EmulatorLib MONITOR_TESTER raylib Imgui fmt Expected)
 
 if(MSVC)
   set_target_properties(${EXEC_NAME} PROPERTIES
